styles/chat.module.css
.header{
  @apply text-center bg-white fixed top-0 left-0 w-full p-3 z-10 shadow;
  box-shadow: rgba(0, 0, 0, 0.05) 0px 1px 2px 0px;
}

.chat{
  @apply relative max-w-lg mx-auto;
  margin-top: 4.5rem;
    /* overflow: hidden; */
      height: calc(100vh - 134px);
}

.system {
  padding: 10px;
  border-radius: 8px 8px 8px 0;
  background: #be6db7;
  width: fit-content;
  max-width: 400px;
  color: #fff;
  box-shadow: rgba(0, 0, 0, 0.04) 0px 3px 5px;
}
.user {
  background: #fff;
  padding: 10px;
  border-radius: 6px 6px 0 6px;
  width: fit-content;
  max-width: 400px;
  box-shadow: rgba(0, 0, 0, 0.04) 0px 3px 5px;
  align-self: flex-end;
}

.system p:last-child,
.user p:last-child {
  margin-bottom: 0;
}

.type_message {
  @apply fixed bottom-0 left-0 w-full;
}

.type_message div {
  @apply w-full h-12 flex items-center justify-between mb-4 max-w-lg mx-auto;
  padding: 10px;
  border-radius: 8px;
  background: #fff;
  /* margin-top: 10px; */
}

.type_message input,
.type_message button {
  font-family: inherit;
  font-size: inherit;
  outline: none;
}

.type_message input {
  background: transparent;
  height: 100%;
  width: 100%;
}

.type_message input:focus {
  outline: none;
}

.type_message button {
  background: #be6db7;
  border-radius: 5px;
  padding: 2px 6px;
  font-size: 13px;
  color: #fff;
  margin-left: 10px;
}

@media screen and (max-width: 512px) {
  .type_message{
    left: 0;
  }
  .type_message div {
    border-top: 1px solid #cfcfcf;
    border-radius: 0;
    background: #fdf4f5;
  }
}

